--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-# local package
-# -e .
-
 # external requirements
 biopython==1.81
 configparser==5.3.0
 contourpy==1.1.0
 cycler==0.11.0
+et-xmlfile==1.1.0
 fonttools==4.40.0
 joblib==1.2.0
 kiwisolver==1.4.4
 kneed==0.8.3
 matplotlib==3.7.1
+mpmath==1.3.0
 numpy==1.25.0
 packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
+plotly==5.15.0
 pip==23.2.1
 Pmw==2.1.1
 pyparsing==3.1.0
